--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,9 @@
   .h2 {
     @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
   }
+  .h3 {
+    @apply text-[85px] leading-tight md:text-[80px] md:leading-[1.3] mb-8 font-semibold;
+  }
   p {
     @apply leading-[1.8] text-white/60 font-light;
   }
